volexc/tests/ui/service_undefined_stream_response.out
Error: undefined type `UndefinedEvent`
   ╭─[ service_undefined_stream_response.vol:6:24 ]
   │
 6 │     fn bar(Request) -> stream UndefinedEvent = 1;
   │                        ──────────┬──────────  
   │                                  ╰──────────── not found
───╯