volexc/tests/ui/service_undefined_stream_response.vol
// Undefined stream response type in service

message Request {}

service Foo {
    fn bar(Request) -> stream UndefinedEvent = 1;
}
